--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@canvasjs/react-charts": "^1.0.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
+    "json-server": "^1.0.0-beta.3",
     "material-ui-popup-state": "^5.3.6",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0"
   },
